[gd_scene load_steps=74 format=2]

[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00003.png" type="Texture" id=1]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00052.png" type="Texture" id=2]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00057.png" type="Texture" id=3]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00056.png" type="Texture" id=4]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00058.png" type="Texture" id=5]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00050.png" type="Texture" id=6]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00051.png" type="Texture" id=7]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00048.png" type="Texture" id=8]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00041.png" type="Texture" id=9]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00021.png" type="Texture" id=10]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00030.png" type="Texture" id=11]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00019.png" type="Texture" id=12]
[ext_resource path="res://ParallaxBG/Kaph-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=14]
[ext_resource path="res://StartGame.gd" type="Script" id=15]
[ext_resource path="res://ParallaxBG/Background.png" type="Texture" id=16]
[ext_resource path="res://ParallaxBG/Midground.png" type="Texture" id=17]
[ext_resource path="res://ParallaxBG/Foreground.png" type="Texture" id=18]
[ext_resource path="res://Audio/Retro9.wav" type="AudioStream" id=19]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00001.png" type="Texture" id=20]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00006.png" type="Texture" id=21]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00000.png" type="Texture" id=22]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00002.png" type="Texture" id=23]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00004.png" type="Texture" id=24]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00005.png" type="Texture" id=25]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00008.png" type="Texture" id=26]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00007.png" type="Texture" id=27]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00055.png" type="Texture" id=28]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00054.png" type="Texture" id=29]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00053.png" type="Texture" id=30]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00059.png" type="Texture" id=31]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00040.png" type="Texture" id=32]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00043.png" type="Texture" id=33]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00045.png" type="Texture" id=34]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00037.png" type="Texture" id=35]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00042.png" type="Texture" id=36]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00046.png" type="Texture" id=37]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00047.png" type="Texture" id=38]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00044.png" type="Texture" id=39]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00049.png" type="Texture" id=40]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00038.png" type="Texture" id=41]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00039.png" type="Texture" id=42]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00032.png" type="Texture" id=43]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00023.png" type="Texture" id=44]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00017.png" type="Texture" id=45]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00014.png" type="Texture" id=46]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00012.png" type="Texture" id=47]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00013.png" type="Texture" id=48]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00016.png" type="Texture" id=49]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00009.png" type="Texture" id=50]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00010.png" type="Texture" id=51]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00018.png" type="Texture" id=52]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00020.png" type="Texture" id=53]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00015.png" type="Texture" id=54]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00022.png" type="Texture" id=55]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00024.png" type="Texture" id=56]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00025.png" type="Texture" id=57]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00027.png" type="Texture" id=58]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00028.png" type="Texture" id=59]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00033.png" type="Texture" id=60]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00034.png" type="Texture" id=61]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00035.png" type="Texture" id=62]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00036.png" type="Texture" id=63]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00026.png" type="Texture" id=64]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00011.png" type="Texture" id=65]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00031.png" type="Texture" id=66]
[ext_resource path="res://ParallaxBG/BlueFlower1/circle.png" type="Texture" id=67]
[ext_resource path="res://FlowerAlight.gd" type="Script" id=68]
[ext_resource path="res://Audio/Retro10.wav" type="AudioStream" id=69]
[ext_resource path="res://ParallaxBG/BlueFlower1/BlueFlower_00029.png" type="Texture" id=70]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 1 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 21 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 65 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 54 ), ExtResource( 49 ), ExtResource( 45 ), ExtResource( 52 ), ExtResource( 12 ), ExtResource( 53 ), ExtResource( 10 ), ExtResource( 55 ), ExtResource( 44 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 64 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 70 ), ExtResource( 11 ), ExtResource( 66 ), ExtResource( 43 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 35 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 32 ), ExtResource( 9 ), ExtResource( 36 ), ExtResource( 33 ), ExtResource( 39 ), ExtResource( 34 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 8 ), ExtResource( 40 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 67
use_filter = true
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=4]
size = 53
use_filter = true
font_data = ExtResource( 13 )

[node name="Pbackground" type="ParallaxBackground"]
layer = 0
script = ExtResource( 14 )

[node name="Background" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 1919, 0 )

[node name="Background" type="Sprite" parent="Background"]
position = Vector2( 959.401, 543 )
scale = Vector2( 2.07457, 1.36261 )
texture = ExtResource( 16 )

[node name="Midground" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.7, 1 )
motion_mirroring = Vector2( 1919, 0 )

[node name="Midground" type="Sprite" parent="Midground"]
position = Vector2( 959.5, 543.5 )
scale = Vector2( 2.07451, 4.03358 )
texture = ExtResource( 17 )

[node name="Foreground" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 1.1, 1 )
motion_mirroring = Vector2( 1918, 0 )

[node name="FlowerA4" type="AnimatedSprite" parent="Foreground"]
position = Vector2( 1379, 576 )
scale = Vector2( 0.1875, 0.201823 )
frames = SubResource( 2 )
frame = 31
playing = true
flip_h = true
flip_v = true

[node name="FlowerAlight" type="Light2D" parent="Foreground/FlowerA4"]
position = Vector2( 106.667, 84.2322 )
texture = ExtResource( 67 )
color = Color( 0.956863, 0.956863, 0.956863, 1 )
energy = 0.6
script = ExtResource( 68 )

[node name="FlowerA2" type="AnimatedSprite" parent="Foreground"]
position = Vector2( 417, 776 )
scale = Vector2( 0.1875, 0.201823 )
frames = SubResource( 2 )
frame = 31
playing = true
flip_h = true

[node name="FlowerAlight" type="Light2D" parent="Foreground/FlowerA2"]
position = Vector2( 96, -109.007 )
texture = ExtResource( 67 )
color = Color( 0.956863, 0.956863, 0.956863, 1 )
energy = 0.6
script = ExtResource( 68 )

[node name="FlowerA3" type="AnimatedSprite" parent="Foreground"]
position = Vector2( 707, 744 )
scale = Vector2( 0.1875, 0.201823 )
frames = SubResource( 2 )
frame = 31
playing = true

[node name="FlowerAlight" type="Light2D" parent="Foreground/FlowerA3"]
position = Vector2( -128, -178.375 )
texture = ExtResource( 67 )
color = Color( 0.956863, 0.956863, 0.956863, 1 )
energy = 0.6
script = ExtResource( 68 )

[node name="Foreground" type="Sprite" parent="Foreground"]
position = Vector2( 964.75, 538.75 )
scale = Vector2( 2.07174, 1.85579 )
texture = ExtResource( 18 )

[node name="FlowerA" type="AnimatedSprite" parent="Foreground"]
position = Vector2( 114, 906 )
scale = Vector2( 0.1875, 0.201823 )
frames = SubResource( 2 )
frame = 32
playing = true

[node name="FlowerAlight" type="Light2D" parent="Foreground/FlowerA"]
position = Vector2( -96, -94.1421 )
texture = ExtResource( 67 )
color = Color( 0.956863, 0.956863, 0.956863, 1 )
energy = 0.6
script = ExtResource( 68 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameTitle" type="Label" parent="Control"]
margin_left = 608.0
margin_top = 158.0
margin_right = 1329.0
margin_bottom = 235.0
custom_colors/font_color = Color( 1, 0.52549, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "A LIZARD'S TALE"

[node name="StartGame" type="Button" parent="Control"]
margin_left = 743.0
margin_top = 536.0
margin_right = 1180.0
margin_bottom = 613.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.862745, 0.443137, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "START GAME"
flat = true
script = ExtResource( 15 )

[node name="LoadGame" type="Button" parent="Control"]
margin_left = 769.0
margin_top = 646.0
margin_right = 1167.0
margin_bottom = 723.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.862745, 0.443137, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Load Game"
flat = true

[node name="Options" type="MenuButton" parent="Control"]
margin_left = 794.0
margin_top = 757.0
margin_right = 1139.0
margin_bottom = 834.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.862745, 0.443137, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Options"

[node name="Quit" type="Button" parent="Control"]
margin_left = 62.0
margin_top = 977.0
margin_right = 273.0
margin_bottom = 1054.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.862745, 0.443137, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Quit"
flat = true

[node name="Credits" type="Button" parent="Control"]
margin_left = 1499.0
margin_top = 989.0
margin_right = 1912.0
margin_bottom = 1066.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0.862745, 0.443137, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Credits..."
flat = true

[node name="UIHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
bus = "SFX"

[node name="UIPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 69 )
bus = "SFX"

[connection signal="mouse_entered" from="Control/StartGame" to="Control/StartGame" method="_on_StartGame_mouse_entered"]
[connection signal="mouse_exited" from="Control/StartGame" to="Control/StartGame" method="_on_StartGame_mouse_exited"]
[connection signal="pressed" from="Control/StartGame" to="Control/StartGame" method="_on_StartGame_pressed"]
[connection signal="mouse_entered" from="Control/LoadGame" to="Control/StartGame" method="_on_LoadGame_mouse_entered"]
[connection signal="pressed" from="Control/LoadGame" to="Control/StartGame" method="_on_LoadGame_pressed"]
[connection signal="mouse_entered" from="Control/Options" to="Control/StartGame" method="_on_Options_mouse_entered"]
[connection signal="pressed" from="Control/Options" to="Control/StartGame" method="_on_Options_pressed"]
[connection signal="mouse_entered" from="Control/Quit" to="Control/StartGame" method="_on_Quit_mouse_entered"]
[connection signal="pressed" from="Control/Quit" to="Control/StartGame" method="_on_Quit_pressed"]
[connection signal="mouse_entered" from="Control/Credits" to="Control/StartGame" method="_on_Credits_mouse_entered"]
[connection signal="pressed" from="Control/Credits" to="Control/StartGame" method="_on_Credits_pressed"]
